--- a/inicio.css
+++ b/inicio.css
@@ -394,6 +394,7 @@ h5{
     border-bottom: none;
     text-decoration: none;
     color: #555555;
+    text-decoration: none;
 }
 
 .linkinterno:visited{
